--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@ nltk==3.8.1
 pyswisseph==2.10.3.2
 geopy==2.4.1
 gunicorn==22.0.0
-# h3==3.7.7  # Comment out or replace with h3==3.7.6
+# h3==3.7.7  # Comment out or replace with a working version
+h3==3.7.6    # Use a version with pre-built wheels if available
 setuptools==70.0.0
 retrying==1.3.4
 googlemaps==4.10.0
