--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ pyswisseph==2.10.3.2
 geopy==2.4.1
 gunicorn==22.0.0
 # h3==3.7.7  # Comment out or replace
-h3==3.7.6    # Compatible with Python 3.10, check PyPI
+h3==3.7.6    # Known to work with Python 3.10, check PyPI
 setuptools==70.0.0
 retrying==1.3.4
 googlemaps==4.10.0
